--- a/rhinoit-gae-web/src/main/webapp/WEB-INF/web.xml
+++ b/rhinoit-gae-web/src/main/webapp/WEB-INF/web.xml
@@ -31,14 +31,14 @@
 
 	<filter>
 		<filter-name>HerokuSecurityFilter</filter-name>
-		<filter-class>rhinoit.servlet.SecurityFilter</filter-class>
+		<filter-class>rhinoit.heroku.servlet.SecurityFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>SecurityFilter</filter-name>
+		<filter-name>HerokuSecurityFilter</filter-name>
 		<url-pattern>/heroku/*</url-pattern>
 	</filter-mapping>
 
-
+<!--
 	<filter>
 		<filter-name>RhinoitFilter</filter-name>
 		<filter-class>rhinoit.servlet.RhinoitFilter</filter-class>
@@ -47,4 +47,6 @@
 		<filter-name>RhinoitFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+ -->
 
+</web-app>
