--- a/rhinoit-gae-web/pom.xml
+++ b/rhinoit-gae-web/pom.xml
@@ -16,14 +16,16 @@
 		<gae.version>1.7.0</gae.version>
 		<gae.plugin.version>0.9.2</gae.plugin.version>
 		<gae.application.version>test</gae.application.version>
-		<mycontainer.version>1.2.47</mycontainer.version>
+		<mycontainer.version>1.2.48</mycontainer.version>
 	</properties>
 
-	<!-- TODO: ARRUMAR DEPENDENCIA DO RHINO
-	http://central.maven.org/maven2/org/mozilla/rhino/1.7R4/
-	-->
+	<!-- TODO: ARRUMAR DEPENDENCIA DO RHINO http://central.maven.org/maven2/org/mozilla/rhino/1.7R4/ -->
 
 	<dependencies>
+		<dependency>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -211,6 +213,11 @@
 				<version>1.6.1</version>
 			</dependency>
 			<dependency>
+				<groupId>org.mozilla</groupId>
+				<artifactId>rhino</artifactId>
+				<version>1.7R4</version>
+			</dependency>
+			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>1.6.1</version>
@@ -289,6 +296,12 @@
 				<groupId>com.googlecode.mycontainer</groupId>
 				<artifactId>mycontainer-commons</artifactId>
 				<version>${mycontainer.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>rhino</groupId>
+						<artifactId>js</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
