--- a/rhinoit-gae-web/src/test/resources/logging.properties
+++ b/rhinoit-gae-web/src/test/resources/logging.properties
@@ -13,4 +13,4 @@
 .level=INFO
 
 handlers=java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.formatter = rhinoit.js.RhinoLogFormatter
+java.util.logging.ConsoleHandler.formatter = voidrepo.js.RhinoLogFormatter
